Fix scrollbars

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -6,6 +6,8 @@ html {
 
 body {
   font-family: 'Source Sans Pro';
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .btn-xl {
